# dl

./: .gitattributes  .gitmodules  ANTI_DETECTION_REVIEW.md  README.md  building-clis-uv-summary.md  cookie-features.md  cookie-uv.md  cookiekit-todo.md  downloadkit-todo.md  main.py  mikf-gallery-dl-8a5edab282632443.txt  pyproject.toml  requestkit-todo.md  todo.md
.github/workflows/: cookiekit-ci.yml
EXTRACTION/: Extraction-Prompt.md  Topics.csv
EXTRACTION/Topic-JSON/: 1000.json  1001.json  1004.json  1018.json  1024.json  1040.json  1041.json  1042.json  1044.json  1047.json  1048.json  1056.json  1057.json  1058.json  1061.json  1076.json  1079.json  1081.json  1083.json  1084.json  1086.json  1087.json  1089.json  110.json  1100.json  1112.json  1114.json  1116.json  1117.json  1120.json  1121.json  1124.json  1128.json  1134.json  1138.json  114.json  1146.json  1148.json  1149.json  115.json  (+1134 more)
MA/: Images.csv  capture_courses.py  capture_images.py  capture_topics.py  links.md
MA/.auth/: mathacademy-cookies.txt
MA/.debug/: course_143_diagnostic.json  diag_course_143.py
MA/Topic-JSON/: 100.json  101.json  1016.json  1017.json  1019.json  1023.json  1026.json  1027.json  1029.json  1031.json  1037.json  1038.json  1045.json  1046.json  1049.json  1062.json  1063.json  1068.json  107.json  1085.json  1088.json  1096.json  1101.json  1102.json  1103.json  1105.json  1106.json  1109.json  111.json  1115.json  1125.json  1130.json  1132.json  1137.json  1141.json  1145.json  116.json  1163.json  1166.json  1168.json  (+683 more)
MA/captures/: _capture_state.jsonl
MA/captures-test/: _capture_state.jsonl
MA/captures-test-2x/: _capture_state.jsonl
MA/captures-test-2x-progress-check/: _capture_state.jsonl
MA/course-progress/: _course_progress_state.jsonl
MA/graphics/: _image_state.jsonl
Math Academy/Topic-JSON/: 1007.json  1020.json  1021.json  1028.json  1030.json  1032.json  1033.json  1035.json  1036.json  104.json  1043.json  1059.json  1060.json  1080.json  1082.json  109.json  1104.json  1107.json  1108.json  1110.json  112.json  1129.json  1131.json  1135.json  1136.json  (+686 more)
V1/: cookie-uv.md  todo.md
cookiekit/: CHANGELOG.md  README.md  pyproject.toml
cookiekit/docs/: release.md
cookiekit/src/cookiekit/: __init__.py  browser.py  checks.py  cli.py  cookiestxt.py  diagnostics.py  persist.py  selectors.py  sources.py  spec.py
cookiekit/tests/: test_browser.py  test_checks.py  test_cli.py  test_cookiestxt.py  test_diagnostics.py  test_selectors.py  test_sources.py  test_spec.py
downloadkit/: README.md  pyproject.toml
downloadkit/src/downloadkit/: __init__.py  cli.py  diagnostics.py  download.py  paths.py  resume.py  validate.py
downloadkit/tests/: conftest.py  test_download.py
requestkit/: README.md  pyproject.toml
requestkit/src/requestkit/: __init__.py  challenge.py  cli.py  diagnostics.py  ratelimit.py  retry.py  session.py
requestkit/tests/: conftest.py  test_challenge.py  test_cli.py  test_session.py
tests/: test_capture_courses.py  test_capture_images.py  test_capture_topics.py  test_main.py
(+4039 files in other folders)
