[project]
name = "dl"
version = "0.1.0"
description = "Personal workspace for cookie, request, and download tooling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pycryptodome>=3.23.0",
    "secretstorage>=3.5.0 ; sys_platform == 'linux'",
]

[tool.uv.workspace]
members = [
    "cookiekit",
    "requestkit",
    "downloadkit",
]
