[project]
name = "dl"
version = "0.1.0"
description = "Personal workspace for cookie, request, and download tooling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cookiekit",
    "requestkit",
    "downloadkit",
]

[project.scripts]
dl = "dl.cli:main"

[tool.uv.sources]
cookiekit = { workspace = true }
requestkit = { workspace = true }
downloadkit = { workspace = true }

[tool.uv.workspace]
members = [
    "cookiekit",
    "requestkit",
    "downloadkit",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
