[project]
name = "requestkit"
version = "0.1.0"
description = "Personal request/session toolkit for practical downloader workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
requestkit = "requestkit.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
